# ai

./: .gitignore  README.md  example_pydanticai.py  pyproject.toml  shares_checker.py
TEMP/: crawl4ai_test.py  llms.py  models.py  scraper.py  test.py  utilities.py
TEMP/agents/: finance.py  html_to_markdown.py
ai/: __init__.py  constants.py  paths.py
examples/: structured_outputs_langchain.py
notes/: embeddings.py  evaluation_matrics.md  function_calling.py
parsers/: pdf_extraction.py
resources/static/example_outputs/: Becoming a substantial holder from CBA opens new window 328KB.md  Ceasing to be a substantial holder from CBA opens new window 1917KB.md
spyders/: __init__.py  asx.py
